force-app/main/default/objects/Repository__c/fields/Branch_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Branch_Strategy__c</fullName>
    <label>Branch Strategy</label>
    <type>Picklist</type>
    <description>The branching strategy used for this repository.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Feature</fullName><default>false</default><label>Feature</label></value>
            <value><fullName>Release</fullName><default>false</default><label>Release</label></value>
            <value><fullName>Trunk</fullName><default>false</default><label>Trunk</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>