force-app/main/default/objects/Repository__c/fields/Default_Branch__c.field-meta.xml
<CustomField>
    <fullName>Default_Branch__c</fullName>
    <label>Default Branch</label>
    <type>Text</type>
    <length>100</length>
    <description>The default branch name for this repository (e.g., main, master).</description>
</CustomField>