force-app/main/default/objects/Repository__c/fields/Last_Commit_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Commit_Date__c</fullName>
    <label>Last Commit Date</label>
    <type>DateTime</type>
    <description>Date and time of the most recent commit in this repository.</description>
</CustomField>