force-app/main/default/objects/Repository__c/fields/Storage_Used__c.field-meta.xml
<CustomField>
    <fullName>Storage_Used__c</fullName>
    <label>Storage Used</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Storage used by this repository in bytes.</description>
</CustomField>