force-app/main/default/objects/Repository__c/fields/Total_Branches__c.field-meta.xml
<CustomField>
    <fullName>Total_Branches__c</fullName>
    <label>Total Branches</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Total number of branches in this repository.</description>
</CustomField>