force-app/main/default/objects/Repository__c/fields/Total_Commits__c.field-meta.xml
<CustomField>
    <fullName>Total_Commits__c</fullName>
    <label>Total Commits</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Total number of commits across all branches in this repository.</description>
</CustomField>